# capyap

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  capyap-dev.yml  capyap.yml  environment.yml  package.json  pyproject.toml  youtube_extract_and_summarize.py
.github/workflows/: desktop-build.yml  desktop-release.yml
apps/: README.md  UI_LLM_BRIEF.md  environment.yml
apps/backend/: README.md
apps/backend/app/: __init__.py  main.py
apps/backend/app/agent/: __init__.py  chapters.py  graph.py  nodes.py  state.py
apps/backend/app/api/: routes_agent.py  routes_settings.py  routes_transcripts.py  schemas.py
apps/backend/app/core/: __init__.py  config.py  dependencies.py
apps/backend/app/services/: __init__.py  chunking.py  llm_client.py  ollama_service.py  retrieval.py  storage.py  text_utils.py  transcript_service.py
apps/backend/app/web/: __init__.py  spa.py
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/frontend/: index.html  package.json  vite.config.js
apps/frontend/src/: App.jsx  lucide-react.tsx  types.ts
apps/frontend/src/components/: AgentPopup.jsx  ApiKeyModal.tsx  CitationCard.tsx  (+3 more)
docs/: AGENTIC_SYSTEM_ARCHITECTURE.md  CAPYAP_CLI.md  DEVELOPMENT_GUIDE.md  LEGACY_CLI.md  OLLAMA_SETUP.md  README.md  RELEASE_CHECKLIST.md  SECURITY_AND_PRIVACY.md
new_webapp/: App.tsx  README.md  index.html  metadata.json  package.json  types.ts
new_webapp/apps/: structure.md
new_webapp/components/: Button.tsx  ChatPopup.tsx  Input.tsx  TranscriptViewer.tsx
new_webapp/services/: api.ts  export.ts
new_webapp/views/: Onboarding.tsx  SourceLoader.tsx  Workspace.tsx
output/: ZbTVXrhesJY.summary.txt  ZbTVXrhesJY.transcript.txt
scripts/: build-frontend.sh  dev-all.sh  dev-desktop.sh  dev-web.sh  generate-readme-gif.ts  make-readme-gif.sh
src/youtube_video_summarizer/: __init__.py  capyap_cli.py  capyap_start.py  chat.py  cli.py
src/youtube_video_summarizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+10 files in other folders)
