[package]
name = "capyap_desktop"
version = "1.0.2"
description = "Capyap local desktop shell"
authors = ["Capyap"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
